@@ -1,5 +1,5 @@
 /*
- * NextFractal 2.3.1
+ * NextFractal 2.3.2
  * https://github.com/nextbreakpoint/nextfractal
  *
  * Copyright 2015-2024 Andrea Medeghini
@@ -24,15 +24,15 @@
  */
 package com.nextbreakpoint.nextfractal.core.javafx;
 
-import com.nextbreakpoint.common.command.Command;
 import com.nextbreakpoint.nextfractal.core.common.Block;
 import com.nextbreakpoint.nextfractal.core.common.Bundle;
-import com.nextbreakpoint.nextfractal.core.common.DefaultThreadFactory;
+import com.nextbreakpoint.nextfractal.core.common.ExecutorUtils;
 import com.nextbreakpoint.nextfractal.core.common.FileManager;
-import com.nextbreakpoint.nextfractal.core.common.SourceError;
-import com.nextbreakpoint.nextfractal.core.render.RendererPoint;
-import com.nextbreakpoint.nextfractal.core.render.RendererSize;
-import com.nextbreakpoint.nextfractal.core.render.RendererTile;
+import com.nextbreakpoint.nextfractal.core.common.ScriptError;
+import com.nextbreakpoint.nextfractal.core.common.ThreadUtils;
+import com.nextbreakpoint.nextfractal.core.graphics.Point;
+import com.nextbreakpoint.nextfractal.core.graphics.Size;
+import com.nextbreakpoint.nextfractal.core.graphics.Tile;
 import javafx.animation.AnimationTimer;
 import javafx.application.Platform;
 import javafx.geometry.Pos;
@@ -42,6 +42,8 @@ import javafx.scene.control.Tooltip;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.stage.DirectoryChooser;
+import lombok.Setter;
+import lombok.extern.java.Log;
 
 import java.io.File;
 import java.io.IOException;
@@ -52,39 +54,41 @@ import java.nio.file.WatchEvent;
 import java.nio.file.WatchKey;
 import java.nio.file.WatchService;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.ThreadFactory;
 import java.util.function.Consumer;
 import java.util.logging.Level;
-import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.nextbreakpoint.nextfractal.core.common.ErrorType.EXECUTE;
+
+@Log
 public class BrowsePane extends BorderPane {
-    private static final Logger logger = Logger.getLogger(BrowsePane.class.getName());
+    private static final String FILE_EXTENSION = ".nf.zip";
     private static final int FRAME_LENGTH_IN_MILLIS = 50;
     private static final int SCROLL_BOUNCE_DELAY = 500;
-    private final ExecutorService browserExecutor;
+
+    private final List<GridItem> items = new ArrayList<>();
+    private final List<String> filter = new LinkedList<>();
     private final StringObservableValue sourcePathProperty;
     private final StringObservableValue importPathProperty;
+    private final ExecutorService executor;
     private final int numRows = 3;
     private final int numCols = 3;
-    private final LinkedList<String> filter = new LinkedList<>();
     private final File workspace;
     private final File examples;
-    private List<GridItem> items = new ArrayList<>();
-    private BrowseDelegate delegate;
-    private RendererTile tile;
-    private AnimationTimer timer;
+    private final Tile tile;
     private Thread thread;
+    private AnimationTimer timer;
+    @Setter
+    private BrowseDelegate delegate;
 
     public BrowsePane(int width, int height, File workspace, File examples) {
         this.workspace = workspace;
@@ -97,7 +101,7 @@ public class BrowsePane extends BorderPane {
         setMaxHeight(height);
         setPrefHeight(height);
 
-        filter.add(".nf.zip");
+        filter.add(FILE_EXTENSION);
 
         sourcePathProperty = new StringObservableValue();
 
@@ -107,31 +111,29 @@ public class BrowsePane extends BorderPane {
 
         importPathProperty.setValue(null);
 
-        int size = width / numCols;
-
-        int maxThreads = numCols;
+        final int size = width / numCols;
 
         tile = createSingleTile(size, size);
 
-        HBox toolbar1 = new HBox(2);
+        final HBox toolbar1 = new HBox(2);
         toolbar1.setAlignment(Pos.CENTER_LEFT);
 
-        HBox toolbar2 = new HBox(2);
+        final HBox toolbar2 = new HBox(2);
         toolbar2.setAlignment(Pos.CENTER);
 
-        HBox toolbar3 = new HBox(2);
+        final HBox toolbar3 = new HBox(2);
         toolbar3.setAlignment(Pos.CENTER_RIGHT);
 
-        Button closeButton = new Button("", Icons.createIconImage("/icon-close.png"));
-        Button deleteButton = new Button("", Icons.createIconImage("/icon-delete.png"));
-        Button reloadButton = new Button("", Icons.createIconImage("/icon-reload.png"));
-        Button importButton = new Button("", Icons.createIconImage("/icon-import.png"));
+        final Button closeButton = new Button("", Icons.createIconImage("/icon-close.png"));
+        final Button deleteButton = new Button("", Icons.createIconImage("/icon-delete.png"));
+        final Button reloadButton = new Button("", Icons.createIconImage("/icon-reload.png"));
+        final Button importButton = new Button("", Icons.createIconImage("/icon-import.png"));
         closeButton.setTooltip(new Tooltip("Hide projects"));
         deleteButton.setTooltip(new Tooltip("Delete projects"));
         reloadButton.setTooltip(new Tooltip("Reload projects"));
         importButton.setTooltip(new Tooltip("Import projects from directory"));
 
-        Label statusLabel = new Label("");
+        final Label statusLabel = new Label("");
 
         toolbar1.getChildren().add(statusLabel);
         toolbar3.getChildren().add(importButton);
@@ -139,7 +141,7 @@ public class BrowsePane extends BorderPane {
         toolbar3.getChildren().add(reloadButton);
         toolbar3.getChildren().add(closeButton);
 
-        BorderPane toolbar = new BorderPane();
+        final BorderPane toolbar = new BorderPane();
         toolbar.getStyleClass().add("toolbar");
         toolbar.getStyleClass().add("translucent");
         toolbar.setPrefHeight(height * 0.07);
@@ -149,7 +151,7 @@ public class BrowsePane extends BorderPane {
 
         deleteButton.setDisable(true);
 
-        GridView grid = new GridView(numRows, numCols, size);
+        final GridView grid = new GridView(numRows, numCols, size);
 
         grid.setDelegate(new GridViewDelegate() {
             @Override
@@ -164,10 +166,10 @@ public class BrowsePane extends BorderPane {
 
             @Override
             public void didSelectionChange(GridView source, int selectedRow, int selectedCol, int clicks) {
-                int index = selectedRow * numCols + selectedCol;
+                final int index = selectedRow * numCols + selectedCol;
                 if (index >= 0 && index < items.size()) {
-                    GridItem item = items.get(index);
-                    File file = item.getFile();
+                    final GridItem item = items.get(index);
+                    final File file = item.getFile();
                     if (file != null) {
                         if (clicks == 1) {
                             item.setSelected(!item.isSelected());
@@ -187,46 +189,46 @@ public class BrowsePane extends BorderPane {
             }
         });
 
-        BorderPane box = new BorderPane();
+        final BorderPane box = new BorderPane();
         box.setCenter(grid);
         box.setBottom(toolbar);
         box.getStyleClass().add("browse");
 
         setCenter(box);
 
-        closeButton.setOnMouseClicked(e -> doClose());
+        closeButton.setOnMouseClicked(_ -> doClose());
 
-        importButton.setOnMouseClicked(e -> doChooseImportFolder());
+        importButton.setOnMouseClicked(_ -> doChooseImportFolder());
 
-        reloadButton.setOnMouseClicked(e -> {
+        reloadButton.setOnMouseClicked(_ -> {
             final File path = getCurrentSourceFolder();
             deleteButton.setDisable(true);
             loadFiles(statusLabel, grid, path);
         });
 
-        deleteButton.setOnMouseClicked(e -> deleteSelected(items));
+        deleteButton.setOnMouseClicked(_ -> deleteSelected(items));
 
-        sourcePathProperty.addListener((observable, oldValue, newValue) -> {
+        sourcePathProperty.addListener((_, _, newValue) -> {
             if (newValue != null) {
                 File path = new File(newValue);
                 reloadFiles(deleteButton, statusLabel, grid, path);
             }
         });
 
-        importPathProperty.addListener((observable, oldValue, newValue) -> {
+        importPathProperty.addListener((_, _, newValue) -> {
             if (newValue != null) {
                 File path = new File(newValue);
                 importFiles(deleteButton, statusLabel, grid, path);
             }
         });
 
-        widthProperty().addListener((observable, oldValue, newValue) -> {
+        widthProperty().addListener((_, _, newValue) -> {
             toolbar1.setPrefWidth(newValue.doubleValue() / 3);
             toolbar2.setPrefWidth(newValue.doubleValue() / 3);
             toolbar3.setPrefWidth(newValue.doubleValue() / 3);
         });
 
-        browserExecutor = Executors.newFixedThreadPool(maxThreads, createThreadFactory("Browser"));
+        executor = ExecutorUtils.newSingleThreadExecutor(ThreadUtils.createVirtualThreadFactory("Browser Panel"));
 
         runTimer(grid);
     }
@@ -243,13 +245,9 @@ public class BrowsePane extends BorderPane {
         return examples;
     }
 
-    private DefaultThreadFactory createThreadFactory(String name) {
-        return new DefaultThreadFactory(name, true, Thread.MIN_PRIORITY);
-    }
-
     public void reload() {
         if (listFiles(workspace).isEmpty()) {
-            logger.log(Level.INFO, "Workspace is empty");
+            log.log(Level.INFO, "Workspace is empty");
             importPathProperty.setValue(null);
             Platform.runLater(this::doChooseImportFolder);
         } else {
@@ -264,28 +262,14 @@ public class BrowsePane extends BorderPane {
     }
 
     private void deleteSelected(List<GridItem> items) {
-        List<File> files = items.stream().filter(GridItem::isSelected).map(GridItem::getFile).toList();
+        final List<File> files = items.stream().filter(GridItem::isSelected).map(GridItem::getFile).toList();
         delegate.didDeleteFiles(files);
     }
 
-    public void setDelegate(BrowseDelegate delegate) {
-        this.delegate = delegate;
-    }
-
     public void dispose() {
-        List<ExecutorService> executors = List.of(browserExecutor);
-        executors.forEach(ExecutorService::shutdownNow);
-        executors.forEach(this::await);
+        ExecutorUtils.shutdown(executor);
         stopWatching();
         removeItems();
-    }
-
-    private void await(ExecutorService executor) {
-        Command.of(() -> executor.awaitTermination(5000, TimeUnit.MILLISECONDS))
-                .execute()
-                .observe()
-                .onFailure(e -> logger.warning("Await termination timeout"))
-                .get();
     }
 
     private void doClose() {
@@ -293,11 +277,11 @@ public class BrowsePane extends BorderPane {
     }
 
     private void doChooseSourceFolder() {
-        Block.begin(a -> doSelectSourceFolder(prepareSourceDirectoryChooser())).end().execute();
+        Block.begin(_ -> doSelectSourceFolder(prepareSourceDirectoryChooser())).end().execute();
     }
 
     private void doChooseImportFolder() {
-        Block.begin(a -> doSelectImportFolder(prepareImportDirectoryChooser())).end().execute();
+        Block.begin(_ -> doSelectImportFolder(prepareImportDirectoryChooser())).end().execute();
     }
 
     private void doSelectSourceFolder(DirectoryChooser sourceDirectoryChooser) {
@@ -306,7 +290,7 @@ public class BrowsePane extends BorderPane {
     }
 
     private DirectoryChooser prepareSourceDirectoryChooser() {
-        DirectoryChooser sourceDirectoryChooser = new DirectoryChooser();
+        final DirectoryChooser sourceDirectoryChooser = new DirectoryChooser();
         sourceDirectoryChooser.setInitialDirectory(getDefaultSourceFolder());
         sourceDirectoryChooser.setTitle("Choose source folder");
         return sourceDirectoryChooser;
@@ -318,24 +302,24 @@ public class BrowsePane extends BorderPane {
     }
 
     private DirectoryChooser prepareImportDirectoryChooser() {
-        DirectoryChooser importDirectoryChooser = new DirectoryChooser();
+        final DirectoryChooser importDirectoryChooser = new DirectoryChooser();
         importDirectoryChooser.setInitialDirectory(getDefaultImportFolder());
         importDirectoryChooser.setTitle("Choose import folder");
         return importDirectoryChooser;
     }
 
-    private RendererTile createSingleTile(int width, int height) {
-        RendererSize imageSize = new RendererSize(width, height);
-        RendererSize tileSize = new RendererSize(width, height);
-        RendererSize tileBorder = new RendererSize(0, 0);
-        RendererPoint tileOffset = new RendererPoint(0, 0);
-        return new RendererTile(imageSize, tileSize, tileOffset, tileBorder);
+    private Tile createSingleTile(int width, int height) {
+        final Size imageSize = new Size(width, height);
+        final Size tileSize = new Size(width, height);
+        final Size tileBorder = new Size(0, 0);
+        final Point tileOffset = new Point(0, 0);
+        return new Tile(imageSize, tileSize, tileOffset, tileBorder);
     }
 
     private void loadFiles(Label statusLabel, GridView grid, File folder) {
         removeItems();
         grid.setData(new GridItem[0]);
-        List<File> files = listFiles(folder);
+        final List<File> files = listFiles(folder);
         if (!files.isEmpty()) {
             statusLabel.setText(files.size() + " project file" + (files.size() > 1 ? "s" : "") + " found");
             loadItems(grid, files);
@@ -345,14 +329,14 @@ public class BrowsePane extends BorderPane {
     }
 
     private void importFiles(Button deleteButton, Label statusLabel, GridView grid, File folder) {
-        List<File> files = listFiles(folder);
+        final List<File> files = listFiles(folder);
         if (!files.isEmpty()) {
             copyFilesAsync(deleteButton, statusLabel, grid, files, getCurrentSourceFolder());
         }
     }
 
     private Future<?> copyFilesAsync(Button deleteButton, Label statusLabel, GridView grid, List<File> files, File dest) {
-        return browserExecutor.submit(() -> copyFiles(deleteButton, statusLabel, grid, files, dest));
+        return executor.submit(() -> copyFiles(deleteButton, statusLabel, grid, files, dest));
     }
 
     private void copyFiles(Button deleteButton, Label statusLabel, GridView grid, List<File> files, File dest) {
@@ -385,21 +369,21 @@ public class BrowsePane extends BorderPane {
     private void saveFile(Bundle session, File name) {
         FileManager.saveBundle(name, session)
                 .observe()
-                .onFailure(e -> logger.log(Level.WARNING, "Can't save file " + name, e))
+                .onFailure(e -> log.log(Level.WARNING, "Can't save file " + name, e))
                 .get();
     }
 
     private File createFileName(File file, File location) {
-        File tmpFile = new File(location, file.getName().substring(0, file.getName().indexOf(".")) + ".nf.zip");
+        File tmpFile = new File(location, file.getName().substring(0, file.getName().indexOf(".")) + FILE_EXTENSION);
         int i = 0;
         while (tmpFile.exists()) {
-            tmpFile = new File(location, file.getName().substring(0, file.getName().indexOf(".")) + "-" + (i++) + ".nf.zip");
+            tmpFile = new File(location, file.getName().substring(0, file.getName().indexOf(".")) + "-" + (i++) + FILE_EXTENSION);
         }
         return tmpFile;
     }
 
     private void loadItems(GridView grid, List<File> files) {
-        GridItem[] items = new GridItem[files.size()];
+        final GridItem[] items = new GridItem[files.size()];
         for (int i = 0; i < files.size(); i++) {
             items[i] = new GridItem();
             items[i].setFile(files.get(i));
@@ -424,30 +408,30 @@ public class BrowsePane extends BorderPane {
 
     private void removeItems() {
         for (int index = 0; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getLoadItemFuture() != null && !item.getLoadItemFuture().isDone()) {
                 item.getLoadItemFuture().cancel(true);
             }
         }
 
         for (int index = 0; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
                 item.getRenderer().abort();
             }
         }
 
 //		for (int index = 0; index < items.size(); index++) {
-//			GridItem item = items.get(index);
+//			final GridItem item = items.get(index);
 //			if (item.getRenderer() != null) {
 //				item.getRenderer().waitFor();
 //			}
 //		}
 
         for (int index = 0; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
-//				GridItemRenderer renderer = item.getRenderer();
+//				final GridItemRenderer renderer = item.getRenderer();
                 item.setRenderer(null);
 //				renderer.dispose();
             }
@@ -462,11 +446,12 @@ public class BrowsePane extends BorderPane {
 
             @Override
             public void handle(long now) {
-                long time = now / 1000000;
+                final long time = now / 1000000;
                 if (time - last > FRAME_LENGTH_IN_MILLIS) {
                     try {
                         updateCells(grid);
                     } catch (ExecutionException | InterruptedException e) {
+                        log.log(Level.WARNING, "Can't update cells", e);
                     }
                     last = time;
                 }
@@ -487,18 +472,18 @@ public class BrowsePane extends BorderPane {
         if (lastRow < grid.getData().length / numCols - 1) {
             lastRow += 1;
         }
-        int firstIndex = Math.min(firstRow * numCols, items.size());
-        int lastIndex = lastRow * numCols + numCols;
+        final int firstIndex = Math.min(firstRow * numCols, items.size());
+        final int lastIndex = lastRow * numCols + numCols;
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             item.setAborted(true);
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             item.setAborted(true);
         }
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getLoadItemFuture() != null) {
                 item.getLoadItemFuture().get();
                 item.setLoadItemFuture(null);
@@ -509,7 +494,7 @@ public class BrowsePane extends BorderPane {
             }
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getLoadItemFuture() != null) {
                 item.getLoadItemFuture().get();
                 item.setLoadItemFuture(null);
@@ -520,60 +505,60 @@ public class BrowsePane extends BorderPane {
             }
         }
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             item.setAborted(false);
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             item.setAborted(false);
         }
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
                 item.getRenderer().abort();
             }
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
                 item.getRenderer().abort();
             }
         }
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
                 item.getRenderer().waitFor();
             }
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
                 item.getRenderer().waitFor();
             }
         }
         for (int index = 0; index < firstIndex; index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
-                GridItemRenderer renderer = item.getRenderer();
+                final GridItemRenderer renderer = item.getRenderer();
                 item.setRenderer(null);
                 item.setBitmap(null);
                 renderer.dispose();
             }
         }
         for (int index = lastIndex; index < items.size(); index++) {
-            GridItem item = items.get(index);
+            final GridItem item = items.get(index);
             if (item.getRenderer() != null) {
-                GridItemRenderer renderer = item.getRenderer();
+                final GridItemRenderer renderer = item.getRenderer();
                 item.setRenderer(null);
                 item.setBitmap(null);
                 renderer.dispose();
             }
         }
         for (int index = firstIndex; index < Math.min(lastIndex, items.size()); index++) {
-            GridItem item = items.get(index);
-            BrowseBitmap bitmap = item.getBitmap();
-            GridItemRenderer renderer = item.getRenderer();
-            long time = System.currentTimeMillis();
+            final GridItem item = items.get(index);
+            final BrowseBitmap bitmap = item.getBitmap();
+            final GridItemRenderer renderer = item.getRenderer();
+            final long time = System.currentTimeMillis();
             if (bitmap == null && time - item.getLastChanged() > SCROLL_BOUNCE_DELAY && item.getLoadItemFuture() == null) {
                 loadItemAsync(item);
             }
@@ -586,7 +571,7 @@ public class BrowsePane extends BorderPane {
 
     private void loadItemAsync(GridItem item) {
         final File file = item.getFile();
-        item.setLoadItemFuture(browserExecutor.submit(() -> {
+        item.setLoadItemFuture(executor.submit(() -> {
             loadItem(item, file);
             return null;
         }));
@@ -595,19 +580,18 @@ public class BrowsePane extends BorderPane {
     private void loadItem(GridItem item, File file) {
         try {
             if (!item.isAborted() && delegate != null) {
-                final BrowseBitmap bitmap = delegate.createBitmap(file, tile.getTileSize());
-
+                final BrowseBitmap bitmap = delegate.createBitmap(file, tile.tileSize());
                 Platform.runLater(() -> item.setBitmap(bitmap));
             }
         } catch (Exception e) {
-            item.setErrors(Arrays.asList(new SourceError(SourceError.ErrorType.RUNTIME, 0, 0, 0, 0, e.getMessage())));
-            logger.log(Level.WARNING, "Can't create bitmap: " + e.getMessage());
+            item.setErrors(List.of(new ScriptError(EXECUTE, 0, 0, 0, 0, e.getMessage())));
+            log.log(Level.WARNING, "Can't create bitmap: " + e.getMessage());
         }
     }
 
     private void initItemAsync(GridItem item) {
         final BrowseBitmap bitmap = item.getBitmap();
-        item.setInitItemFuture(browserExecutor.submit(() -> {
+        item.setInitItemFuture(executor.submit(() -> {
             initItem(item, bitmap);
             return null;
         }));
@@ -616,13 +600,12 @@ public class BrowsePane extends BorderPane {
     private void initItem(GridItem item, BrowseBitmap bitmap) {
         try {
             if (!item.isAborted() && delegate != null) {
-                GridItemRenderer renderer = delegate.createRenderer(bitmap);
-
+                final GridItemRenderer renderer = delegate.createRenderer(bitmap);
                 Platform.runLater(() -> item.setRenderer(renderer));
             }
         } catch (Exception e) {
-            item.setErrors(List.of(new SourceError(SourceError.ErrorType.RUNTIME, 0, 0, 0, 0, e.getMessage())));
-            logger.log(Level.WARNING, "Can't initialize renderer", e);
+            item.setErrors(List.of(new ScriptError(EXECUTE, 0, 0, 0, 0, e.getMessage())));
+            log.log(Level.WARNING, "Can't initialize renderer", e);
         }
     }
 
@@ -639,57 +622,47 @@ public class BrowsePane extends BorderPane {
 
     private void startWatching(Button deleteButton, Label statusLabel, GridView grid) {
         if (thread == null) {
-            thread = createThreadFactory("Watcher").newThread(() -> watchLoop(getCurrentSourceFolder().toPath(), a -> Platform.runLater(() -> this.reload(deleteButton, statusLabel, grid))));
+            final ThreadFactory threadFactory = ThreadUtils.createPlatformThreadFactory("Watcher");
+            final Path path = getCurrentSourceFolder().toPath();
+            thread = threadFactory.newThread(() -> watchLoop(path, _ -> reload(deleteButton, statusLabel, grid)));
             thread.start();
         }
     }
 
     private void watchLoop(Path dir, Consumer<Void> consumer) {
         try {
-            for (; ; ) {
+            for (;;) {
                 WatchService watcher = FileSystems.getDefault().newWatchService();
-
                 WatchKey watchKey = null;
-
-                logger.log(Level.INFO, "Watch loop starting...");
-
+                log.log(Level.INFO, "Watch loop starting...");
                 try {
                     watchKey = dir.register(watcher, StandardWatchEventKinds.ENTRY_CREATE, StandardWatchEventKinds.ENTRY_DELETE, StandardWatchEventKinds.ENTRY_MODIFY);
-
-                    logger.log(Level.INFO, "Watch loop started");
-
+                    log.log(Level.INFO, "Watch loop started");
                     for (; ; ) {
                         WatchKey key = watcher.take();
-
                         for (WatchEvent<?> event : key.pollEvents()) {
-                            logger.log(Level.INFO, "Watch loop events " + event.count());
-
-                            consumer.accept(null);
+                            log.log(Level.INFO, "Watch loop events " + event.count());
+                            Platform.runLater(() -> consumer.accept(null));
                         }
-
                         boolean valid = key.reset();
-
                         if (!valid) {
                             break;
                         }
                     }
-
-                    logger.log(Level.INFO, "Watch loop exited");
+                    log.log(Level.INFO, "Watch loop exited");
                 } finally {
                     if (watchKey != null) {
                         watchKey.cancel();
                     }
-
                     watcher.close();
                 }
-
-                consumer.accept(null);
+                Platform.runLater(() -> consumer.accept(null));
             }
         } catch (InterruptedException x) {
-            logger.log(Level.INFO, "Watch loop interrupted");
+            log.log(Level.INFO, "Watch loop interrupted");
             Thread.currentThread().interrupt();
         } catch (IOException e) {
-            logger.log(Level.WARNING, "Can't watch directory " + getCurrentSourceFolder().getAbsolutePath(), e);
+            log.log(Level.WARNING, "Can't watch directory " + getCurrentSourceFolder().getAbsolutePath(), e);
         }
     }
 }
