@@ -1,5 +1,5 @@
 /*
- * NextFractal 2.3.1
+ * NextFractal 2.3.2
  * https://github.com/nextbreakpoint/nextfractal
  *
  * Copyright 2015-2024 Andrea Medeghini
@@ -26,12 +26,13 @@ package com.nextbreakpoint.nextfractal.core.javafx;
 
 import com.nextbreakpoint.common.command.Command;
 import com.nextbreakpoint.nextfractal.core.common.CoreFactory;
-import com.nextbreakpoint.nextfractal.core.common.DefaultThreadFactory;
+import com.nextbreakpoint.nextfractal.core.common.ExecutorUtils;
 import com.nextbreakpoint.nextfractal.core.common.ImageComposer;
+import com.nextbreakpoint.nextfractal.core.common.ThreadUtils;
 import com.nextbreakpoint.nextfractal.core.export.ExportSession;
-import com.nextbreakpoint.nextfractal.core.export.ExportState;
-import com.nextbreakpoint.nextfractal.core.render.RendererSize;
-import com.nextbreakpoint.nextfractal.core.render.RendererTile;
+import com.nextbreakpoint.nextfractal.core.export.ExportSessionState;
+import com.nextbreakpoint.nextfractal.core.graphics.Size;
+import com.nextbreakpoint.nextfractal.core.graphics.Tile;
 import javafx.application.Platform;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
@@ -46,6 +47,8 @@ import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
 import javafx.stage.Screen;
+import lombok.Setter;
+import lombok.extern.java.Log;
 
 import java.io.InputStream;
 import java.nio.IntBuffer;
@@ -55,35 +58,33 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
-import java.util.logging.Logger;
 import java.util.stream.Stream;
 
 import static com.nextbreakpoint.nextfractal.core.common.Plugins.tryFindFactory;
 
+@Log
 public class JobsPane extends BorderPane {
-    private static Logger logger = Logger.getLogger(JobsPane.class.getName());
     private static final int PADDING = 8;
 
-    private Map<String, JobEntry> exportEntries = new HashMap<>();
+    private final Map<String, JobEntry> exportEntries = new HashMap<>();
     private final ExecutorService executor;
     private final ListView<Bitmap> listView;
+    private final Tile tile;
+    @Setter
     private JobsDelegate delegate;
-    private RendererTile tile;
 
-    public JobsPane(RendererTile tile) {
+    public JobsPane(Tile tile) {
         this.tile = tile;
 
         listView = new ListView<>();
-        listView.setFixedCellSize(tile.getTileSize().getHeight() + PADDING);
-        listView.setCellFactory(view -> new JobsListCell(tile));
+        listView.setFixedCellSize(tile.tileSize().height() + PADDING);
+        listView.setCellFactory(_ -> new JobsListCell(tile));
 
-        HBox exportControls = new HBox(0);
+        final HBox exportControls = new HBox(0);
         exportControls.setAlignment(Pos.CENTER);
-        Button suspendButton = new Button("", createIconImage("/icon-suspend.png", 0.015));
-        Button resumeButton = new Button("", createIconImage("/icon-resume.png", 0.015));
-        Button removeButton = new Button("", createIconImage("/icon-remove.png", 0.015));
+        final Button suspendButton = new Button("", createIconImage("/icon-suspend.png", 0.015));
+        final Button resumeButton = new Button("", createIconImage("/icon-resume.png", 0.015));
+        final Button removeButton = new Button("", createIconImage("/icon-remove.png", 0.015));
         suspendButton.setTooltip(new Tooltip("Suspend selected jobs"));
         resumeButton.setTooltip(new Tooltip("Resume selected jobs"));
         removeButton.setTooltip(new Tooltip("Remove selected jobs"));
@@ -95,18 +96,18 @@ public class JobsPane extends BorderPane {
         exportControls.getChildren().add(removeButton);
         exportControls.getStyleClass().add("toolbar");
 
-        Label sizeLabel = new Label();
-        Label formatLabel = new Label();
-        Label durationLabel = new Label();
+        final Label sizeLabel = new Label();
+        final Label formatLabel = new Label();
+        final Label durationLabel = new Label();
 
-        VBox detailsPane = new VBox(10);
+        final VBox detailsPane = new VBox(10);
         detailsPane.setAlignment(Pos.TOP_LEFT);
         detailsPane.getChildren().add(formatLabel);
         detailsPane.getChildren().add(sizeLabel);
         detailsPane.getChildren().add(durationLabel);
         detailsPane.getStyleClass().add("details");
 
-        BorderPane jobsPane = new BorderPane();
+        final BorderPane jobsPane = new BorderPane();
         jobsPane.setCenter(listView);
         jobsPane.setBottom(detailsPane);
 
@@ -115,13 +116,13 @@ public class JobsPane extends BorderPane {
 
         getStyleClass().add("jobs");
 
-        List<Button> buttonsList = Arrays.asList(suspendButton, resumeButton, removeButton);
-        listView.getSelectionModel().getSelectedItems().addListener((ListChangeListener.Change<? extends Bitmap> c) -> updateButtons(buttonsList, c.getList().size() == 0));
+        final List<Button> buttonsList = Arrays.asList(suspendButton, resumeButton, removeButton);
+        listView.getSelectionModel().getSelectedItems().addListener((ListChangeListener.Change<? extends Bitmap> c) -> updateButtons(buttonsList, c.getList().isEmpty()));
 
         suspendButton.setOnAction(e -> selectedItems(listView).filter(bitmap -> !isExportSessionSuspended(bitmap))
             .forEach(bitmap -> Optional.ofNullable(delegate).ifPresent(delegate -> delegate.sessionSuspended((ExportSession) bitmap.getProperty("exportSession")))));
 
-        resumeButton.setOnAction(e -> selectedItems(listView).filter(bitmap -> isExportSessionSuspended(bitmap))
+        resumeButton.setOnAction(e -> selectedItems(listView).filter(this::isExportSessionSuspended)
             .forEach(bitmap -> Optional.ofNullable(delegate).ifPresent(delegate -> delegate.sessionResumed((ExportSession) bitmap.getProperty("exportSession")))));
 
         removeButton.setOnAction(e -> selectedItems(listView)
@@ -129,21 +130,17 @@ public class JobsPane extends BorderPane {
 
         listView.getSelectionModel().getSelectedItems().addListener((ListChangeListener.Change<? extends Bitmap> c) -> itemSelected(listView, sizeLabel, formatLabel, durationLabel));
 
-        executor = Executors.newSingleThreadExecutor(createThreadFactory("Jobs"));
+        executor = ExecutorUtils.newSingleThreadExecutor(ThreadUtils.createVirtualThreadFactory("Jobs Panel"));
     }
 
     private boolean isExportSessionSuspended(Bitmap bitmap) {
-        ExportSession exportSession = (ExportSession) bitmap.getProperty("exportSession");
-        JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
-        return exportEntry != null && exportEntry.getState() == ExportState.SUSPENDED;
-    }
-
-    private DefaultThreadFactory createThreadFactory(String name) {
-        return new DefaultThreadFactory(name, true, Thread.MIN_PRIORITY);
+        final ExportSession exportSession = (ExportSession) bitmap.getProperty("exportSession");
+        final JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
+        return exportEntry != null && exportEntry.state() == ExportSessionState.SUSPENDED;
     }
 
     private void updateButtons(List<Button> buttons, boolean disabled) {
-        buttons.stream().forEach(button -> button.setDisable(disabled));
+        buttons.forEach(button -> button.setDisable(disabled));
     }
 
     private Stream<Bitmap> selectedItems(ListView<Bitmap> jobsList) {
@@ -151,20 +148,20 @@ public class JobsPane extends BorderPane {
     }
 
     private int computePercentage(double percentage) {
-        return (int)Math.rint(Screen.getPrimary().getVisualBounds().getWidth() * percentage);
+        return (int) Math.rint(Screen.getPrimary().getVisualBounds().getWidth() * percentage);
     }
 
     private ImageView createIconImage(String name, double percentage) {
-        int size = computePercentage(percentage);
-        InputStream stream = getClass().getResourceAsStream(name);
+        final int size = computePercentage(percentage);
+        final InputStream stream = getClass().getResourceAsStream(name);
         if (stream != null) {
-            ImageView image = new ImageView(new Image(stream));
+            final ImageView image = new ImageView(new Image(stream));
             image.setSmooth(true);
             image.setFitWidth(size);
             image.setFitHeight(size);
             return image;
         } else {
-            ImageView image = new ImageView();
+            final ImageView image = new ImageView();
             image.setSmooth(true);
             image.setFitWidth(size);
             image.setFitHeight(size);
@@ -173,15 +170,15 @@ public class JobsPane extends BorderPane {
     }
 
     private void updateJobList(ListView<Bitmap> jobsList) {
-        ObservableList<Bitmap> bitmaps = jobsList.getItems();
+        final ObservableList<Bitmap> bitmaps = jobsList.getItems();
         for (int i = bitmaps.size() - 1; i >= 0; i--) {
-            Bitmap bitmap = bitmaps.get(i);
-            ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
-            JobEntry exportEntry = exportEntries.get(session.getSessionId());
+            final Bitmap bitmap = bitmaps.get(i);
+            final ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
+            final JobEntry exportEntry = exportEntries.get(session.getSessionId());
             if (exportEntry == null) {
                 bitmaps.remove(i);
             } else {
-                bitmap.setProgress(exportEntry.getProgress());
+                bitmap.setProgress(exportEntry.progress());
                 if (jobsList.getSelectionModel().isSelected(i)) {
                     triggerUpdate(jobsList, bitmap, i);
                     jobsList.getSelectionModel().select(i);
@@ -197,17 +194,17 @@ public class JobsPane extends BorderPane {
     }
 
     private void itemSelected(ListView<Bitmap> listView, Label sizeLabel, Label formatLabel, Label durationLabel) {
-        Bitmap bitmap = listView.getSelectionModel().getSelectedItem();
+        final Bitmap bitmap = listView.getSelectionModel().getSelectedItem();
         if (bitmap != null) {
-            ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
+            final ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
             if (session.getFrameCount() <= 1) {
-                sizeLabel.setText(session.getSize().getWidth() + "\u00D7" + session.getSize().getHeight() + " pixels");
+                sizeLabel.setText(session.getFrameSize().width() + "\u00D7" + session.getFrameSize().height() + " pixels");
                 formatLabel.setText(session.getEncoder().getName() + " Image");
             } else {
-                sizeLabel.setText(session.getSize().getWidth() + "\u00D7" + session.getSize().getHeight() + " pixels");
+                sizeLabel.setText(session.getFrameSize().width() + "\u00D7" + session.getFrameSize().height() + " pixels");
                 formatLabel.setText(session.getEncoder().getName() + " Video");
-                long durationInSeconds = (long)Math.rint(session.getFrameCount() / session.getFrameRate());
-                long minutes = (long)Math.rint(durationInSeconds / 60.0);
+                final long durationInSeconds = (long)Math.rint(session.getFrameCount() / (float) session.getFrameRate());
+                final long minutes = (long)Math.rint(durationInSeconds / 60.0);
                 if (minutes <= 2) {
                     durationLabel.setText("Duration " + durationInSeconds + " seconds");
                 } else {
@@ -227,19 +224,15 @@ public class JobsPane extends BorderPane {
     }
 
     private IntBuffer renderImage(ExportSession session, ImageComposer composer) {
-        return composer.renderImage(session.getFrames().get(0).getScript(), session.getFrames().get(0).getMetadata());
+        return composer.renderImage(session.getFrames().getFirst().script(), session.getFrames().getFirst().metadata());
     }
 
-    private void addItem(ListView<Bitmap> listView, ExportSession session, IntBuffer pixels, RendererSize size) {
-        BrowseBitmap bitmap = new BrowseBitmap(size.getWidth(), size.getHeight(), pixels);
-        JobEntry jobEntry = new JobEntry(session, ExportState.READY, 0f, bitmap);
+    private void addItem(ListView<Bitmap> listView, ExportSession session, IntBuffer pixels, Size size) {
+        final BrowseBitmap bitmap = new BrowseBitmap(size.width(), size.height(), pixels);
+        final JobEntry jobEntry = new JobEntry(session, ExportSessionState.READY, 0f, bitmap);
         exportEntries.put(session.getSessionId(), jobEntry);
         bitmap.setProperty("exportSession", session);
-        listView.getItems().add(0, bitmap);
-    }
-
-    public void setDelegate(JobsDelegate delegate) {
-        this.delegate = delegate;
+        listView.getItems().addFirst(bitmap);
     }
 
     public void updateSessions() {
@@ -247,21 +240,11 @@ public class JobsPane extends BorderPane {
     }
 
     public void dispose() {
-        List<ExecutorService> executors = Arrays.asList(executor);
-        executors.forEach(executor -> executor.shutdownNow());
-        executors.forEach(executor -> await(executor));
-    }
-
-    private void await(ExecutorService executor) {
-        Command.of(() -> executor.awaitTermination(5000, TimeUnit.MILLISECONDS))
-                .execute()
-                .observe()
-                .onFailure(e -> logger.warning("Await termination timeout"))
-                .get();
+        ExecutorUtils.shutdown(executor);
     }
 
     public void appendSession(ExportSession session) {
-        Command.of(tryFindFactory(session.getFrames().getFirst().getPluginId()))
+        Command.of(tryFindFactory(session.getFrames().getFirst().pluginId()))
                 .map(this::createImageComposer)
                 .execute()
                 .optional()
@@ -269,59 +252,31 @@ public class JobsPane extends BorderPane {
     }
 
     private ImageComposer createImageComposer(CoreFactory factory) {
-        return factory.createImageComposer(createThreadFactory("Jobs Composer"), tile, true);
+        return factory.createImageComposer(ThreadUtils.createPlatformThreadFactory("Jobs Image Composer"), tile, true);
     }
 
-    public void updateSession(ExportSession exportSession, ExportState state, Float progress) {
-        JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
+    public void updateSession(ExportSession exportSession, ExportSessionState state, Float progress) {
+        final JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
         if (exportEntry != null) {
-            JobEntry jobEntry = new JobEntry(exportSession, state, progress, exportEntry.getBitmap());
-            jobEntry.getBitmap().setProgress(exportEntry.getProgress());
-            int index = listView.getItems().indexOf(jobEntry.getBitmap());
+            final JobEntry jobEntry = new JobEntry(exportSession, state, progress, exportEntry.bitmap());
+            jobEntry.bitmap().setProgress(exportEntry.progress());
+            final int index = listView.getItems().indexOf(jobEntry.bitmap());
             if (listView.getSelectionModel().isSelected(index)) {
-                triggerUpdate(listView, jobEntry.getBitmap(), index);
+                triggerUpdate(listView, jobEntry.bitmap(), index);
                 listView.getSelectionModel().select(index);
             } else {
-                triggerUpdate(listView, jobEntry.getBitmap(),index);
+                triggerUpdate(listView, jobEntry.bitmap(),index);
             }
             exportEntries.put(exportSession.getSessionId(), jobEntry);
         }
     }
 
     public void removeSession(ExportSession exportSession) {
-        JobEntry exportEntry = exportEntries.remove(exportSession.getSessionId());
+        final JobEntry exportEntry = exportEntries.remove(exportSession.getSessionId());
         if (exportEntry != null) {
-            listView.getItems().remove(exportEntry.getBitmap());
+            listView.getItems().remove(exportEntry.bitmap());
         }
     }
 
-    private class JobEntry {
-        private ExportSession exportSession;
-        private ExportState state;
-        private Float progress;
-        private Bitmap bitmap;
-
-        public JobEntry(ExportSession exportSession, ExportState state, Float progress, Bitmap bitmap) {
-            this.exportSession = exportSession;
-            this.state = state;
-            this.progress = progress;
-            this.bitmap = bitmap;
-        }
-
-        public ExportSession getExportSession() {
-            return exportSession;
-        }
-
-        public ExportState getState() {
-            return state;
-        }
-
-        public Float getProgress() {
-            return progress;
-        }
-
-        public Bitmap getBitmap() {
-            return bitmap;
-        }
-    }
+    private record JobEntry(ExportSession exportSession, ExportSessionState state, Float progress, Bitmap bitmap) {}
 }
