@@ -1,5 +1,5 @@
 /*
- * NextFractal 2.3.1
+ * NextFractal 2.3.2
  * https://github.com/nextbreakpoint/nextfractal
  *
  * Copyright 2015-2024 Andrea Medeghini
@@ -24,6 +24,8 @@
  */
 package com.nextbreakpoint.nextfractal.mandelbrot.core;
 
+import lombok.Getter;
+
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Path2D;
 import java.awt.geom.PathIterator;
@@ -32,62 +34,59 @@ import java.util.List;
 
 public class Trap {
 	private final Path2D.Double path2d = new Path2D.Double();
-	private final Number center;
+	@Getter
+    private final ComplexNumber center;
 	
-	public Trap(Number center) {
+	public Trap(ComplexNumber center) {
 		this.center = center;
 	}
-	
-	public Number getCenter() {
-		return center;
-	}
 
-	public Trap moveTo(Number x) {
+    public Trap moveTo(ComplexNumber x) {
 		path2d.moveTo(x.r(), -x.i());
 		return this;
 	}
 
-	public Trap lineTo(Number x) {
+	public Trap lineTo(ComplexNumber x) {
 		path2d.lineTo(x.r(), -x.i());
 		return this;
 	}
 
-	public Trap arcTo(Number p, Number x) {
+	public Trap arcTo(ComplexNumber p, ComplexNumber x) {
 		path2d.curveTo(p.r(), -p.i(), x.r(), -x.i(), x.r(), -x.i());
 		return this;
 	}
 
-	public Trap quadTo(Number p, Number x) {
+	public Trap quadTo(ComplexNumber p, ComplexNumber x) {
 		path2d.quadTo(p.r(), -p.i(), x.r(), -x.i());
 		return this;
 	}
 
-	public Trap curveTo(Number p, Number q, Number x) {
+	public Trap curveTo(ComplexNumber p, ComplexNumber q, ComplexNumber x) {
 		path2d.curveTo(p.r(), -p.i(), q.r(), -q.i(), x.r(), -x.i());
 		return this;
 	}
 
-	public Trap moveRel(Number x) {
+	public Trap moveRel(ComplexNumber x) {
 		path2d.moveTo(path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i());
 		return this;
 	}
 
-	public Trap lineRel(Number x) {
+	public Trap lineRel(ComplexNumber x) {
 		path2d.lineTo(path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i());
 		return this;
 	}
 
-	public Trap arcRel(Number p, Number x) {
+	public Trap arcRel(ComplexNumber p, ComplexNumber x) {
 		path2d.curveTo(path2d.getCurrentPoint().getX() + p.r(), path2d.getCurrentPoint().getY() - p.i(), path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i(), path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i());
 		return this;
 	}
 
-	public Trap quadRel(Number p, Number x) {
+	public Trap quadRel(ComplexNumber p, ComplexNumber x) {
 		path2d.quadTo(path2d.getCurrentPoint().getX() + p.r(), path2d.getCurrentPoint().getY() - p.i(), path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i());
 		return this;
 	}
 
-	public Trap curveRel(Number p, Number q, Number x) {
+	public Trap curveRel(ComplexNumber p, ComplexNumber q, ComplexNumber x) {
 		path2d.curveTo(path2d.getCurrentPoint().getX() + p.r(), path2d.getCurrentPoint().getY() - p.i(), path2d.getCurrentPoint().getX() + q.r(), path2d.getCurrentPoint().getY() - q.i(), path2d.getCurrentPoint().getX() + x.r(), path2d.getCurrentPoint().getY() - x.i());
 		return this;
 	}
@@ -97,28 +96,25 @@ public class Trap {
 		return this;
 	}
 	
-	public boolean contains(Number x) {
+	public boolean contains(ComplexNumber x) {
 		return path2d.contains(x.r() - center.r(), x.i() - center.i());
 	}
 
-	public List<Number> toPoints() {
-		PathIterator iterator = path2d.getPathIterator(AffineTransform.getTranslateInstance(center.r(), -center.i()), 0.005);
-		List<Number> points = new ArrayList<>();
-		double[] coords = new double[6];
+	public List<ComplexNumber> toPoints() {
+		final PathIterator iterator = path2d.getPathIterator(AffineTransform.getTranslateInstance(center.r(), -center.i()), 0.005);
+		final List<ComplexNumber> points = new ArrayList<>();
+		final double[] segment = new double[6];
 		while (!iterator.isDone()) {
-			switch (iterator.currentSegment(coords)) {
-				case PathIterator.SEG_LINETO:
-					points.add(new Number(coords[0], coords[1]));
-					break;
-				case PathIterator.SEG_MOVETO:
-					points.add(new Number(coords[0], coords[1]));
-					break;
-				case PathIterator.SEG_CLOSE:
-					points.add(new Number(points.get(0).r(), points.get(0).i()));
-					break;
-				default:
-					break;
-			}
+            switch (iterator.currentSegment(segment)) {
+                case PathIterator.SEG_LINETO -> points.add(new ComplexNumber(segment[0], segment[1]));
+                case PathIterator.SEG_MOVETO -> points.add(new ComplexNumber(segment[0], segment[1]));
+                case PathIterator.SEG_CLOSE -> {
+                    final ComplexNumber number = points.getFirst();
+                    points.add(new ComplexNumber(number.r(), number.i()));
+                }
+                default -> {
+                }
+            }
 			iterator.next();
 		}
 		return points;
