@@ -1,5 +1,5 @@
 /*
- * NextFractal 2.3.1
+ * NextFractal 2.3.2
  * https://github.com/nextbreakpoint/nextfractal
  *
  * Copyright 2015-2024 Andrea Medeghini
@@ -30,44 +30,43 @@ import com.nextbreakpoint.nextfractal.core.common.ImageComposer;
 import com.nextbreakpoint.nextfractal.core.common.Integer4D;
 import com.nextbreakpoint.nextfractal.core.common.Metadata;
 import com.nextbreakpoint.nextfractal.core.common.Time;
-import com.nextbreakpoint.nextfractal.core.render.Java2DRendererFactory;
-import com.nextbreakpoint.nextfractal.core.render.Java2DRendererGraphicsContext;
-import com.nextbreakpoint.nextfractal.core.render.RendererAffine;
-import com.nextbreakpoint.nextfractal.core.render.RendererFactory;
-import com.nextbreakpoint.nextfractal.core.render.RendererGraphicsContext;
-import com.nextbreakpoint.nextfractal.core.render.RendererPoint;
-import com.nextbreakpoint.nextfractal.core.render.RendererSize;
-import com.nextbreakpoint.nextfractal.core.render.RendererTile;
-import com.nextbreakpoint.nextfractal.mandelbrot.dsl.DSLCompiler;
-import com.nextbreakpoint.nextfractal.mandelbrot.dsl.DSLParser;
-import com.nextbreakpoint.nextfractal.mandelbrot.dsl.DSLParserResult;
+import com.nextbreakpoint.nextfractal.core.graphics.AffineTransform;
+import com.nextbreakpoint.nextfractal.core.graphics.GraphicsContext;
+import com.nextbreakpoint.nextfractal.core.graphics.GraphicsFactory;
+import com.nextbreakpoint.nextfractal.core.graphics.GraphicsUtils;
+import com.nextbreakpoint.nextfractal.core.graphics.Point;
+import com.nextbreakpoint.nextfractal.core.graphics.Size;
+import com.nextbreakpoint.nextfractal.core.graphics.Tile;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Color;
-import com.nextbreakpoint.nextfractal.mandelbrot.core.Number;
+import com.nextbreakpoint.nextfractal.mandelbrot.core.ComplexNumber;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Orbit;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Scope;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Trap;
-import com.nextbreakpoint.nextfractal.mandelbrot.renderer.Renderer;
-import com.nextbreakpoint.nextfractal.mandelbrot.renderer.RendererRegion;
-import com.nextbreakpoint.nextfractal.mandelbrot.renderer.RendererView;
+import com.nextbreakpoint.nextfractal.mandelbrot.dsl.DSLParser;
+import com.nextbreakpoint.nextfractal.mandelbrot.dsl.DSLParserResult;
+import com.nextbreakpoint.nextfractal.mandelbrot.graphics.Region;
+import com.nextbreakpoint.nextfractal.mandelbrot.graphics.Renderer;
+import com.nextbreakpoint.nextfractal.mandelbrot.graphics.View;
+import lombok.extern.java.Log;
 
-import java.awt.*;
+import java.awt.Graphics2D;
+import java.awt.RenderingHints;
 import java.awt.image.BufferedImage;
 import java.awt.image.DataBufferInt;
 import java.nio.IntBuffer;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ThreadFactory;
-import java.util.logging.Logger;
+import java.util.logging.Level;
 
+@Log
 public class MandelbrotImageComposer implements ImageComposer {
-    private static final Logger logger = Logger.getLogger(MandelbrotImageComposer.class.getName());
-
     private boolean aborted;
-    private boolean opaque;
-    private RendererTile tile;
-    private ThreadFactory threadFactory;
+    private final boolean opaque;
+    private final Tile tile;
+    private final ThreadFactory threadFactory;
 
-    public MandelbrotImageComposer(ThreadFactory threadFactory, RendererTile tile, boolean opaque) {
+    public MandelbrotImageComposer(ThreadFactory threadFactory, Tile tile, boolean opaque) {
         this.tile = tile;
         this.opaque = opaque;
         this.threadFactory = threadFactory;
@@ -76,8 +75,8 @@ public class MandelbrotImageComposer implements ImageComposer {
     @Override
     public IntBuffer renderImage(String script, Metadata data) {
         MandelbrotMetadata metadata = (MandelbrotMetadata) data;
-        RendererSize suggestedSize = tile.getTileSize();
-        BufferedImage image = new BufferedImage(suggestedSize.getWidth(), suggestedSize.getHeight(), BufferedImage.TYPE_INT_ARGB);
+        Size suggestedSize = tile.tileSize();
+        BufferedImage image = new BufferedImage(suggestedSize.width(), suggestedSize.height(), BufferedImage.TYPE_INT_ARGB);
         IntBuffer buffer = IntBuffer.wrap(((DataBufferInt) image.getRaster().getDataBuffer()).getData());
         Graphics2D g2d = null;
         try {
@@ -88,61 +87,64 @@ public class MandelbrotImageComposer implements ImageComposer {
             g2d.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BICUBIC);
             g2d.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
             g2d.setRenderingHint(RenderingHints.KEY_FRACTIONALMETRICS, RenderingHints.VALUE_FRACTIONALMETRICS_ON);
-            DSLParser parser = new DSLParser(DSLParser.class.getPackage().getName() + ".generated", "Compile" + System.nanoTime());
-            DSLParserResult result = parser.parse(script);
-            DSLCompiler compiler = new DSLCompiler();
-            Orbit orbit = compiler.compileOrbit(result).create();
-            Color color = compiler.compileColor(result).create();
-            Java2DRendererFactory renderFactory = new Java2DRendererFactory();
+            final DSLParser parser = new DSLParser(DSLParser.getPackageName(), DSLParser.getClassName());
+            final DSLParserResult parserResult = parser.parse(script);
+            final Orbit orbit = parserResult.orbitClassFactory().create();
+            final Color color = parserResult.colorClassFactory().create();
+            GraphicsFactory renderFactory = GraphicsUtils.findGraphicsFactory("Java2D");
             Renderer renderer = new Renderer(threadFactory, renderFactory, tile);
             if (metadata.getOptions().isShowPreview() && !metadata.isJulia()) {
-                int previewWidth = (int) Math.rint(tile.getImageSize().getWidth() * metadata.getOptions().getPreviewSize().getX());
-                int previewHeight = (int) Math.rint(tile.getImageSize().getHeight() * metadata.getOptions().getPreviewSize().getY());
-                RendererSize tileSize = new RendererSize(previewWidth, previewHeight);
-                int x = (int) Math.rint(metadata.getOptions().getPreviewOrigin().getX() * tile.getImageSize().getWidth());
-                int y = (int) Math.rint(metadata.getOptions().getPreviewOrigin().getY() * tile.getImageSize().getHeight());
-                RendererPoint tileOffset = new RendererPoint(x, tile.getImageSize().getHeight() - previewHeight + y);
-                renderer.setPreviewTile(new RendererTile(tile.getImageSize(), tileSize, tileOffset, new RendererSize(0, 0)));
+                int previewWidth = (int) Math.rint(tile.imageSize().width() * metadata.getOptions().getPreviewSize().x());
+                int previewHeight = (int) Math.rint(tile.imageSize().height() * metadata.getOptions().getPreviewSize().y());
+                Size tileSize = new Size(previewWidth, previewHeight);
+                int x = (int) Math.rint(metadata.getOptions().getPreviewOrigin().x() * tile.imageSize().width());
+                int y = (int) Math.rint(metadata.getOptions().getPreviewOrigin().y() * tile.imageSize().height());
+                Point tileOffset = new Point(x, tile.imageSize().height() - previewHeight + y);
+                renderer.setPreviewTile(new Tile(tile.imageSize(), tileSize, tileOffset, new Size(0, 0)));
             }
             renderer.setOpaque(opaque);
             Double4D translation = metadata.getTranslation();
             Double4D rotation = metadata.getRotation();
             Double4D scale = metadata.getScale();
             Double2D constant = metadata.getPoint();
-            Time time = metadata.getTime();
+            Time time = metadata.time();
             boolean julia = metadata.isJulia();
             renderer.setOrbit(orbit);
             renderer.setColor(color);
             renderer.init();
-            RendererView view = new RendererView();
-            view.setTraslation(translation);
+            View view = new View();
+            view.setTranslation(translation);
             view.setRotation(rotation);
             view.setScale(scale);
             view.setState(new Integer4D(0, 0, 0, 0));
             view.setJulia(julia);
-            view.setPoint(new Number(constant.getX(), constant.getY()));
+            view.setPoint(new ComplexNumber(constant.x(), constant.y()));
             renderer.setView(view);
             renderer.setTime(time);
             renderer.runTask();
-            renderer.waitForTasks();
-            Java2DRendererGraphicsContext renderContext = new Java2DRendererGraphicsContext(g2d);
+            renderer.waitForTask();
+            if (renderer.isAborted() || renderer.isInterrupted()) {
+                aborted = true;
+                return buffer;
+            }
+            GraphicsContext renderContext = renderFactory.createGraphicsContext(g2d);
             renderer.copyImage(renderContext);
-            RendererRegion region = new RendererRegion(orbit.getInitialRegion());
-            renderContext.setAffine(createTransform(renderFactory, tile));
-            renderContext.setStrokeLine(tile.getImageSize().getWidth() * 0.002f, RendererGraphicsContext.CAP_BUTT, RendererGraphicsContext.JOIN_MITER, 1f);
+            Region region = new Region(orbit.getInitialRegion());
+            renderContext.setAffineTransform(createTransform(renderFactory, tile));
+            renderContext.setStrokeLine(tile.imageSize().width() * 0.002f, GraphicsContext.CAP_BUTT, GraphicsContext.JOIN_MITER, 1f);
             if (metadata.getOptions().isShowTraps()) {
-                drawTraps(renderFactory, renderContext, tile.getImageSize(), region, metadata, orbit.getTraps());
+                drawTraps(renderFactory, renderContext, tile.imageSize(), region, metadata, orbit.getTraps());
             }
             if (metadata.getOptions().isShowOrbit()) {
-                java.util.List<Number[]> states = renderOrbit(orbit, constant);
-                drawOrbit(renderFactory, renderContext, tile.getImageSize(), region, metadata, states);
+                java.util.List<ComplexNumber[]> states = renderOrbit(orbit, constant);
+                drawOrbit(renderFactory, renderContext, tile.imageSize(), region, metadata, states);
             }
             if (metadata.getOptions().isShowPoint()) {
-                drawPoint(renderFactory, renderContext, tile.getImageSize(), region, metadata);
+                drawPoint(renderFactory, renderContext, tile.imageSize(), region, metadata);
             }
-            aborted = renderer.isInterrupted();
         } catch (Throwable e) {
-            logger.severe(e.getMessage());
+            log.log(Level.WARNING, "Can't render image", e);
+            aborted = true;
         } finally {
             if (g2d != null) {
                 g2d.dispose();
@@ -151,26 +153,26 @@ public class MandelbrotImageComposer implements ImageComposer {
         return buffer;
     }
 
-    protected RendererAffine createTransform(RendererFactory factory, RendererTile tile) {
-        final RendererSize imageSize = tile.getImageSize();
-        final RendererPoint tileOffset = tile.getTileOffset();
-        final int centerY = imageSize.getHeight() / 2;
-        final RendererAffine affine = factory.createAffine();
-        affine.append(factory.createTranslateAffine(0, +centerY));
-        affine.append(factory.createScaleAffine(1, -1));
-        affine.append(factory.createTranslateAffine(0, -centerY));
-        affine.append(factory.createTranslateAffine(-tileOffset.getX(), tileOffset.getY()));
+    protected AffineTransform createTransform(GraphicsFactory factory, Tile tile) {
+        final Size imageSize = tile.imageSize();
+        final Point tileOffset = tile.tileOffset();
+        final int centerY = imageSize.height() / 2;
+        final AffineTransform affine = factory.createAffineTransform();
+        affine.append(factory.createTranslateAffineTransform(0, +centerY));
+        affine.append(factory.createScaleAffineTransform(1, -1));
+        affine.append(factory.createTranslateAffineTransform(0, -centerY));
+        affine.append(factory.createTranslateAffineTransform(-tileOffset.x(), tileOffset.y()));
         return affine;
     }
 
-    private java.util.List<Number[]> renderOrbit(Orbit orbit, Double2D point) {
-        java.util.List<Number[]> states = new ArrayList<>();
+    private java.util.List<ComplexNumber[]> renderOrbit(Orbit orbit, Double2D point) {
+        java.util.List<ComplexNumber[]> states = new ArrayList<>();
         try {
             if (orbit != null) {
                 Scope scope = new Scope();
                 orbit.setScope(scope);
                 orbit.init();
-                orbit.setW(new Number(point.getX(), point.getY()));
+                orbit.setW(new ComplexNumber(point.x(), point.y()));
                 orbit.setX(orbit.getInitialPoint());
                 orbit.render(states);
             }
@@ -180,27 +182,28 @@ public class MandelbrotImageComposer implements ImageComposer {
     }
 
     @Override
-    public RendererSize getSize() {
-        return tile.getTileSize();
+    public Size getSize() {
+        return tile.tileSize();
     }
 
-    public boolean isInterrupted() {
+    @Override
+    public boolean isAborted() {
         return aborted;
     }
 
-    private void drawPoint(Java2DRendererFactory factory, Java2DRendererGraphicsContext gc, RendererSize imageSize, RendererRegion region, MandelbrotMetadata metadata) {
-        Number size = region.getSize();
-        Number center = region.getCenter();
+    private void drawPoint(GraphicsFactory factory, GraphicsContext gc, Size imageSize, Region region, MandelbrotMetadata metadata) {
+        ComplexNumber size = region.getSize();
+        ComplexNumber center = region.getCenter();
         double[] t = metadata.getTranslation().toArray();
         double[] r = metadata.getRotation().toArray();
         double tx = t[0];
         double ty = t[1];
         double tz = t[2];
         double a = -r[2] * Math.PI / 180;
-        double dw = imageSize.getWidth();
-        double dh = imageSize.getWidth() * size.i() / size.r();
-        double cx = imageSize.getWidth() / 2;
-        double cy = imageSize.getHeight() / 2;
+        double dw = imageSize.width();
+        double dh = imageSize.width() * size.i() / size.r();
+        double cx = imageSize.width() / 2d;
+        double cy = imageSize.height() / 2d;
         gc.setStroke(factory.createColor(1, 1, 0, 1));
         double[] point = metadata.getPoint().toArray();
         double zx = point[0];
@@ -212,7 +215,7 @@ public class MandelbrotImageComposer implements ImageComposer {
         int x = (int) Math.rint(qx * dw + cx);
         int y = (int) Math.rint(cy - qy * dh);
         gc.beginPath();
-        int d = (int) Math.rint(imageSize.getWidth() * 0.0025);
+        int d = (int) Math.rint(imageSize.width() * 0.0025);
         gc.moveTo(x - d, y - d);
         gc.lineTo(x + d, y - d);
         gc.lineTo(x + d, y + d);
@@ -221,22 +224,22 @@ public class MandelbrotImageComposer implements ImageComposer {
         gc.stroke();
     }
 
-    private void drawOrbit(Java2DRendererFactory factory, Java2DRendererGraphicsContext gc, RendererSize imageSize, RendererRegion region, MandelbrotMetadata metadata, List<Number[]> states) {
+    private void drawOrbit(GraphicsFactory factory, GraphicsContext gc, Size imageSize, Region region, MandelbrotMetadata metadata, List<ComplexNumber[]> states) {
         if (states.size() > 1) {
-            Number size = region.getSize();
-            Number center = region.getCenter();
+            ComplexNumber size = region.getSize();
+            ComplexNumber center = region.getCenter();
             double[] t = metadata.getTranslation().toArray();
             double[] r = metadata.getRotation().toArray();
             double tx = t[0];
             double ty = t[1];
             double tz = t[2];
             double a = -r[2] * Math.PI / 180;
-            double dw = imageSize.getWidth();
-            double dh = imageSize.getWidth() * size.i() / size.r();
-            double cx = imageSize.getWidth() / 2;
-            double cy = imageSize.getHeight() / 2;
+            double dw = imageSize.width();
+            double dh = imageSize.width() * size.i() / size.r();
+            double cx = imageSize.width() / 2d;
+            double cy = imageSize.height() / 2d;
             gc.setStroke(factory.createColor(1, 0, 0, 1));
-            Number[] state = states.get(0);
+            ComplexNumber[] state = states.getFirst();
             double zx = state[0].r();
             double zy = state[0].i();
             double px = (zx - tx - center.r()) / (tz * size.r());
@@ -263,26 +266,26 @@ public class MandelbrotImageComposer implements ImageComposer {
         }
     }
 
-    private void drawTraps(Java2DRendererFactory factory, Java2DRendererGraphicsContext gc, RendererSize imageSize, RendererRegion region, MandelbrotMetadata metadata, java.util.List<Trap> traps) {
-        if (traps.size() > 0) {
-            Number size = region.getSize();
-            Number center = region.getCenter();
+    private void drawTraps(GraphicsFactory factory, GraphicsContext gc, Size imageSize, Region region, MandelbrotMetadata metadata, java.util.List<Trap> traps) {
+        if (!traps.isEmpty()) {
+            ComplexNumber size = region.getSize();
+            ComplexNumber center = region.getCenter();
             double[] t = metadata.getTranslation().toArray();
             double[] r = metadata.getRotation().toArray();
             double tx = t[0];
             double ty = t[1];
             double tz = t[2];
             double a = -r[2] * Math.PI / 180;
-            double dw = imageSize.getWidth();
-            double dh = imageSize.getWidth() * size.i() / size.r();
-            double cx = imageSize.getWidth() / 2;
-            double cy = imageSize.getHeight() / 2;
+            double dw = imageSize.width();
+            double dh = imageSize.width() * size.i() / size.r();
+            double cx = imageSize.width() / 2d;
+            double cy = imageSize.height() / 2d;
             gc.setStroke(factory.createColor(1, 1, 0, 1));
             for (Trap trap : traps) {
-                java.util.List<Number> points = trap.toPoints();
-                if (points.size() > 0) {
-                    double zx = points.get(0).r();
-                    double zy = points.get(0).i();
+                java.util.List<ComplexNumber> points = trap.toPoints();
+                if (!points.isEmpty()) {
+                    double zx = points.getFirst().r();
+                    double zy = points.getFirst().i();
                     double px = (zx - tx - center.r()) / (tz * size.r());
                     double py = (zy - ty - center.i()) / (tz * size.r());
                     double qx = Math.cos(a) * px + Math.sin(a) * py;
